--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
     }
   ],
   "require": {
-    "php": "^8.0"
+    "php": "^8.0",
+    "laravel/lumen-framework": "^8.0"
   },
   "require-dev": {
+    "fakerphp/faker": "^1.9.1",
     "phpunit/phpunit": "^9.0"
   },
   "config": {
@@ -39,5 +41,10 @@
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "scripts": {
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ]
+  }
 }
