add lumen installation and other basic stuff

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src/"
+      "App\\": "src/",
+      "Apps\\BlogApi\\": "apps/blog-api/"
     }
   },
   "autoload-dev": {
