--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/",
-      "Apps\\BlogApi\\": "apps/blog-api/"
+      "Apps\\BlogApi\\App\\": "apps/blog-api/app/"
     }
   },
   "autoload-dev": {
