--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     }
   ],
   "require": {
+    "laravel/lumen-framework": "^8.0",
     "php": "^8.0",
-    "laravel/lumen-framework": "^8.0"
+    "tymon/jwt-auth": "^1.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
