--- a/apps/blog-api/composer.json
+++ b/apps/blog-api/composer.json
@@ -1,14 +1,19 @@
 {
-    "name": "apps/blog-api",
-    "description": "The Blog API powered by Laravel Lumen Framework.",
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": "^8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Apps\\BlogApi\\": "app/"
-        }
+  "name": "apps/blog-api",
+  "description": "The Blog API powered by Laravel Lumen Framework.",
+  "license": "MIT",
+  "type": "project",
+  "require": {
+    "php": "^8.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Apps\\BlogApi\\": "app/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Apps\\BlogApi\\Tests\\": "tests/"
+    }
+  }
 }
