--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+      "Tests\\" : "tests/",
+      "Apps\\BlogApi\\Tests\\": "apps/blog-api/tests/"
     }
   },
   "minimum-stability": "dev",
