--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,22 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=blog-api.db
-DB_PORT=3306
-DB_DATABASE=lumen
-DB_USERNAME=example
-DB_PASSWORD=secret
+DB_AUTH_CONNECTION=mysql
+DB_AUTH_HOST=realworld.auth.db
+DB_AUTH_PORT=3306
+DB_AUTH_DATABASE=lumen
+DB_AUTH_USERNAME=example
+DB_AUTH_PASSWORD=secret
+
+DB_BLOG_CONNECTION=mysql
+DB_BLOG_HOST=realworld.blog.db
+DB_BLOG_PORT=3306
+DB_BLOG_DATABASE=lumen
+DB_BLOG_USERNAME=example
+DB_BLOG_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
