--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
     }
   ],
   "require": {
+    "amranidev/micro-bus": "^0.2.7",
     "laravel/lumen-framework": "^8.0",
     "php": "^8.0",
-    "tymon/jwt-auth": "^1.0"
+    "tymon/jwt-auth": "^1.0",
+    "symfony/messenger": "^5.2"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
