--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "amranidev/micro-bus": "^0.2.7",
     "laravel/lumen-framework": "^8.0",
     "php": "^8.0",
-    "tymon/jwt-auth": "^1.0",
-    "symfony/messenger": "^5.2"
+    "tymon/jwt-auth": "^1.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
@@ -36,13 +35,15 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/",
-      "Apps\\BlogApi\\App\\": "apps/blog-api/app/"
+      "Apps\\BlogApi\\App\\": "apps/blog-api/app/",
+      "Apps\\BlogAuth\\App\\": "apps/blog-auth/app/"
     }
   },
   "autoload-dev": {
     "psr-4": {
       "Tests\\" : "tests/",
-      "Apps\\BlogApi\\Tests\\": "apps/blog-api/tests/"
+      "Apps\\BlogApi\\Tests\\": "apps/blog-api/tests/",
+      "Apps\\BlogAuth\\Tests\\": "apps/blog-auth/tests/"
     }
   },
   "minimum-stability": "dev",
