--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,32 @@ services:
     networks:
       - realworld
 
+  realworld.auth.app:
+    build:
+      context: .
+      dockerfile: ./etc/docker/php.Dockerfile
+    container_name: realworld.auth.app
+    restart: unless-stopped
+    tty: true
+    ports:
+      - 8879:8879
+      - 9001:9000
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+      - ./etc/infrastructure/config/blog-api/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    env_file:
+      - .env
+    depends_on:
+      - realworld.auth.db
+      - realworld.default.db
+    command: php -S realworld.auth.app:8879 -t apps/blog-auth/public
+    networks:
+      - realworld
+
   realworld.blog.db:
     image: mysql:5.7.22
     container_name: realworld.blog.db
@@ -45,6 +71,32 @@ services:
     networks:
       - realworld
 
+  realworld.blog.app:
+    build:
+      context: .
+      dockerfile: ./etc/docker/php.Dockerfile
+    container_name: realworld.blog.app
+    restart: unless-stopped
+    tty: true
+    ports:
+      - 8880:8880
+      - 9000:9000
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+      - ./etc/infrastructure/config/blog-api/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+    env_file:
+      - .env
+    depends_on:
+      - realworld.blog.db
+      - realworld.default.db
+    command: php -S realworld.blog.app:8880 -t apps/blog-api/public
+    networks:
+      - realworld
+
   realworld.default.db:
     image: mysql:5.7.22
     container_name: realworld.default.db
@@ -64,81 +116,6 @@ services:
     volumes:
       - realworld-dbdata-default:/var/lib/mysql/
       - ./etc/infrastructure/config/shared/mysql/my.cnf:/etc/mysql/my.cnf
-    networks:
-      - realworld
-
-  blog-api.queue:
-    build:
-      context: .
-      dockerfile: ./etc/docker/php.Dockerfile
-    container_name: blog-api.queue
-    restart: unless-stopped
-    tty: true
-    environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
-    working_dir: /var/www
-    command: >
-      sh -c "cd apps/blog-api && php artisan queue:listen"
-    volumes:
-      - ./:/var/www
-      - ./etc/infrastructure/config/blog-api/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-    depends_on:
-      - blog-api.app
-    networks:
-      - realworld
-
-  blog-api.app:
-    build:
-      context: .
-      dockerfile: ./etc/docker/php.Dockerfile
-    container_name: blog-api.app
-    restart: unless-stopped
-    tty: true
-    ports:
-      - 8880:8880
-      - 9000:9000
-    environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
-    working_dir: /var/www
-    volumes:
-      - ./:/var/www
-      - ./etc/infrastructure/config/blog-api/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-    env_file:
-      - .env
-    depends_on:
-      - realworld.auth.db
-      - realworld.blog.db
-      - realworld.default.db
-    command: php -S blog-api.app:8880 -t apps/blog-api/public
-    networks:
-      - realworld
-
-  blog-auth.app:
-    build:
-      context: .
-      dockerfile: ./etc/docker/php.Dockerfile
-    container_name: blog-auth.app
-    restart: unless-stopped
-    tty: true
-    ports:
-      - 8882:8882
-      - 9001:9000
-    environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
-    working_dir: /var/www
-    volumes:
-      - ./:/var/www
-      - ./etc/infrastructure/config/blog-api/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-    env_file:
-      - .env
-    depends_on:
-      - realworld.auth.db
-      - realworld.blog.db
-      - realworld.default.db
-    command: php -S blog-api.app:8882 -t apps/blog-auth/public
     networks:
       - realworld
 
