--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,6 @@ services:
       - .env
     depends_on:
       - realworld.auth.db
-      - realworld.default.db
     command: php -S realworld.auth.app:8879 -t apps/blog-auth/public
     networks:
       - realworld
@@ -92,30 +91,7 @@ services:
       - .env
     depends_on:
       - realworld.blog.db
-      - realworld.default.db
     command: php -S realworld.blog.app:8880 -t apps/blog-api/public
-    networks:
-      - realworld
-
-  realworld.default.db:
-    image: mysql:5.7.22
-    container_name: realworld.default.db
-    restart: unless-stopped
-    tty: true
-    ports:
-      - 3362:3306
-    environment:
-      MYSQL_DATABASE: ${DB_DEFAULT_DATABASE}
-      MYSQL_USER: ${DB_DEFAULT_USERNAME}
-      MYSQL_PASSWORD: ${DB_DEFAULT_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DB_DEFAULT_PASSWORD}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    env_file:
-      - .env
-    volumes:
-      - realworld-dbdata-default:/var/lib/mysql/
-      - ./etc/infrastructure/config/shared/mysql/my.cnf:/etc/mysql/my.cnf
     networks:
       - realworld
 
@@ -125,12 +101,11 @@ services:
     ports:
       - 8881:80
     environment:
-      - PMA_HOSTS=realworld.auth.db,realworld.blog.db,realworld.default.db
-      - PMA_PORTS=3306,3306,3306
+      - PMA_HOSTS=realworld.auth.db,realworld.blog.db
+      - PMA_PORTS=3306,3306
     depends_on:
       - realworld.auth.db
       - realworld.blog.db
-      - realworld.default.db
     networks:
       - realworld
 
@@ -165,6 +140,4 @@ volumes:
   realworld-dbdata-auth:
     driver: local
   realworld-dbdata-blog:
-    driver: local
-  realworld-dbdata-default:
     driver: local
