--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "mguinea/lumen-ddd-realworld-example",
   "type": "project",
   "description": "Lumen PHP codebase containing real world examples (CRUD, auth, advanced patterns, etc) that adheres to the [RealWorld](https://github.com/gothinkster/realworld) spec and API",
-  "keywords": ["realworld", "example", "jwt", "authentication", "crud", "lumen", "ddd", "hexagonal"],
+  "keywords": ["realworld", "example", "jwt", "authentication", "crud", "lumen", "ddd", "hexagonal", "cqrs"],
   "homepage": "https://github.com/mguinea/lumen-ddd-realworld-example",
   "license": "MIT",
   "authors": [
@@ -13,12 +13,12 @@
     }
   ],
   "require": {
+    "firebase/php-jwt": "^5.2",
+    "guzzlehttp/guzzle": "^7.3",
+    "lambdish/phunctional": "^2.0",
     "laravel/lumen-framework": "^8.0",
     "php": "^8.0",
-    "symfony/messenger": "^5.0",
-    "tymon/jwt-auth": "^1.0",
-    "lambdish/phunctional": "^2.0",
-    "guzzlehttp/guzzle": "^7.3"
+    "symfony/messenger": "^5.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
