--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,32 @@
-APP_NAME=Lumen
+APP_NAME=RealWorld
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
-
 LOG_CHANNEL=daily
-LOG_SLACK_WEBHOOK_URL=
-
-DB_AUTH_CONNECTION=mysql
-DB_AUTH_HOST=realworld.auth.db
-DB_AUTH_PORT=3306
-DB_AUTH_DATABASE=lumen
-DB_AUTH_USERNAME=example
-DB_AUTH_PASSWORD=secret
-
-DB_BLOG_CONNECTION=mysql
-DB_BLOG_HOST=realworld.blog.db
-DB_BLOG_PORT=3306
-DB_BLOG_DATABASE=lumen
-DB_BLOG_USERNAME=example
-DB_BLOG_PASSWORD=secret
-
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 
-JWT_SECRET=foobar
+###> auth
+AUTH_APP_PORT=8879
+AUTH_DB_CONNECTION=mysql
+AUTH_DB_HOST=realworld.auth.db
+AUTH_DB_PORT=3360
+AUTH_DB_DATABASE=realworld_auth
+AUTH_DB_USERNAME=example
+AUTH_DB_PASSWORD=secret
+###< auth
+
+###> blog
+BLOG_APP_PORT=8880
+BLOG_DB_CONNECTION=mysql
+BLOG_DB_HOST=realworld.blog.db
+BLOG_DB_PORT=3362
+BLOG_DB_DATABASE=realworld_blog
+BLOG_DB_USERNAME=example
+BLOG_DB_PASSWORD=secret
+###< blog
+
+###> phpmyadmin
+PHPMYADMIN_PORT=8881
+###< phpmyadmin
