--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,17 @@
   "name": "mguinea/lumen-ddd-realworld-example",
   "type": "project",
   "description": "Lumen PHP codebase containing real world examples (CRUD, auth, advanced patterns, etc) that adheres to the [RealWorld](https://github.com/gothinkster/realworld) spec and API",
-  "keywords": ["realworld", "example", "jwt", "authentication", "crud", "lumen", "ddd", "hexagonal", "cqrs"],
+  "keywords": [
+    "realworld",
+    "example",
+    "jwt",
+    "authentication",
+    "crud",
+    "lumen",
+    "ddd",
+    "hexagonal",
+    "cqrs"
+  ],
   "homepage": "https://github.com/mguinea/lumen-ddd-realworld-example",
   "license": "MIT",
   "authors": [
@@ -13,6 +23,7 @@
     }
   ],
   "require": {
+    "elasticsearch/elasticsearch": "^7.0",
     "firebase/php-jwt": "^5.2",
     "guzzlehttp/guzzle": "^7.3",
     "lambdish/phunctional": "^2.0",
@@ -38,14 +49,14 @@
     "psr-4": {
       "App\\": "src/",
       "Apps\\BlogApi\\App\\": "apps/blog-api/app/",
-      "Apps\\BlogAuth\\App\\": "apps/blog-auth/app/"
+      "Apps\\AuthApi\\App\\": "apps/auth-api/app/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\" : "tests/",
+      "Tests\\": "tests/",
       "Apps\\BlogApi\\Tests\\": "apps/blog-api/tests/",
-      "Apps\\BlogAuth\\Tests\\": "apps/blog-auth/tests/"
+      "Apps\\AuthApi\\Tests\\": "apps/auth-api/tests/"
     }
   },
   "minimum-stability": "dev",
